@@ -4,9 +4,7 @@ import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import co.kr.allpick.domain.member.repository.MemberRepository;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.stereotype.Service;
@@ -17,6 +15,7 @@ import co.kr.allpick.domain.order.dto.DeliveryAddressResponseDto;
 import co.kr.allpick.domain.order.dto.OrderCreateRequestDto;
 import co.kr.allpick.domain.order.dto.OrderResponseDto;
 import co.kr.allpick.domain.order.dto.PaymentResponseDto;
+import co.kr.allpick.domain.order.entity.DeliveryAddress;
 import co.kr.allpick.domain.order.entity.Order;
 import co.kr.allpick.domain.order.entity.OrderItem;
 import co.kr.allpick.domain.order.entity.Payment;
@@ -40,7 +39,6 @@ public class OrderServiceImpl implements OrderService {
     private final OrderItemRepository orderItemRepository;
     private final PaymentRepository paymentRepository;
     private final DeliveryAddressRepository deliveryAddressRepository;
-    private final MemberRepository memberRepository;
 
     @Override
     @Transactional
@@ -58,7 +56,7 @@ public class OrderServiceImpl implements OrderService {
         // 3. 주문 상품 생성
         List<OrderItem> orderItems = request.getOrderItems().stream()
                 .map(item -> orderItemRepository.save(item.toEntity(savedOrder)))
-                .collect(Collectors.toList());
+                .toList();
 
         // 4. 총 금액 업데이트
         BigDecimal totalAmount = orderItems.stream()
@@ -95,11 +93,7 @@ public class OrderServiceImpl implements OrderService {
     public DeliveryAddressResponseDto addDeliveryAddress(Long memberId, DeliveryAddressRequestDto request) {
         logger.info("배송지 추가 - memberId: {}", memberId);
 
-        // #26 회원 존재 검증
-        memberRepository.findById(memberId)
-                .orElseThrow(() -> new BusinessException(ErrorCode.MEMBER_NOT_FOUND));
-
-        // #26 중복 배송지 검증
+        // 중복 배송지 검증
         if (deliveryAddressRepository.existsByMemberIdAndAddressAndAddressDetail(
                 memberId, request.getAddress(), request.getAddressDetail())) {
             throw new BusinessException(ErrorCode.DELIVERY_ADDRESS_DUPLICATE);
@@ -115,12 +109,47 @@ public class OrderServiceImpl implements OrderService {
     @Transactional(readOnly = true)
     public List<DeliveryAddressResponseDto> getDeliveryAddresses(Long memberId) {
         logger.info("배송지 목록 조회 - memberId: {}", memberId);
-        return deliveryAddressRepository.findByMemberId(memberId)
+        return deliveryAddressRepository.findByMemberIdAndDeletedAtIsNull(memberId)
                 .stream()
                 .map(DeliveryAddressResponseDto::from)
-                .collect(Collectors.toList());
+                .toList();
     }
     
+    @Override
+    @Transactional
+    public DeliveryAddressResponseDto updateDeliveryAddress(Long memberId, Long addressId, DeliveryAddressRequestDto request) {
+        logger.info("[OrderService] 배송지 수정 - memberId: {}, addressId: {}", memberId, addressId);
+        DeliveryAddress address = findAddressAndValidateOwner(memberId, addressId);
+        validateAddressNotUsedInOrder(addressId);
+        address.update(request.getRecipientName(), request.getPhone(), request.getZipCode(),
+                request.getAddress(), request.getAddressDetail(), request.isDefault());
+        return DeliveryAddressResponseDto.from(address);
+    }
+
+    @Override
+    @Transactional
+    public void deleteDeliveryAddress(Long memberId, Long addressId) {
+        logger.info("[OrderService] 배송지 삭제 - memberId: {}, addressId: {}", memberId, addressId);
+        DeliveryAddress address = findAddressAndValidateOwner(memberId, addressId);
+        validateAddressNotUsedInOrder(addressId);
+        address.delete();
+    }
+
+    private DeliveryAddress findAddressAndValidateOwner(Long memberId, Long addressId) {
+        DeliveryAddress address = deliveryAddressRepository.findById(addressId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.ADDRESS_NOT_FOUND));
+        if (!address.getMemberId().equals(memberId)) {
+            throw new BusinessException(ErrorCode.UNAUTHORIZED_ADDRESS);
+        }
+        return address;
+    }
+
+    private void validateAddressNotUsedInOrder(Long addressId) {
+        if (orderRepository.existsByAddressId(addressId)) {
+            throw new BusinessException(ErrorCode.ADDRESS_CANNOT_MODIFY);
+        }
+    }
+
 //    주문 번호 생성
     private String generateUniqueOrderNumber() {
         String orderNumber;
